load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "requirements_windows.txt",
)

filegroup(
    name = "local_repository_files",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "//proto:all_files",
        "//elm:all_files",
        "//elm/private:all_files",
        "//elm/toolchain:all_files",
        "//repository:all_files",
    ],
    visibility = ["//visibility:public"],
)
