module(name = "rules_elm", version = "1.0.0")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_python", version = "0.32.2")

load_toolchain = use_extension("//elm:deps.bzl", "elm_toolchain_extension")
use_repo(
    load_toolchain,
    "com_github_elm_compiler_linux",
    "com_github_elm_compiler_mac",
    "com_github_rtfeldman_node_test_runner",
)
register_toolchains("//elm/toolchain:linux")
register_toolchains("//elm/toolchain:mac")
