load("//elm/private:elm_toolchain.bzl", "elm_toolchain")

elm_toolchain(
    name = "linux",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

elm_toolchain(
    name = "mac",
    exec_compatible_with = [
        "@platforms//os:osx",
        # "@platforms//cpu:x86_64", Let Rosetta handle it. 0.19.0 was built in 2018, pre-ARM macOS
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
